<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="earned">Earned</string>
    <string name="expended">Expended</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="keep">Keep</string>
    <string name="add_supercategory">Add supercategory</string>
    <string name="add_category">Add category</string>
    <string name="add_rule">Add rule</string>
    <string name="new_supercategory">New supercategory</string>
    <string name="new_category">New category</string>
    <string name="choose_category">Choose a category</string>
	<string name="done">Done</string>
	<string name="cancel">Cancel</string>
    <string name="no_rules">You have not created any rules yet.</string>
    <string name="rules_no_categories">Rules depend on categories to work, but you haven\'t created any categories yet. 
        You can click below to be taken to the categories screen.       
    </string>
    <string name="confirm_delete_rule">Really delete this rule?</string>
    
    <!-- Text and hints for UI components -->
    <string name="app_name">Ledger</string>
    <string name="subtotal">Subtotal</string>
    <string name="grand_total">Grand total</string>
    <string name="title_activity_entry">Entry</string>
    <string name="edit_caption_hint">Caption</string>
    <string name="txt_what">What</string>
    <string name="edit_value_hint">Value</string>
    <string name="txt_category">Category</string>
    <string name="txt_when">When</string>
    <string name="btn_date">Date</string>
    <string name="btn_time">Time</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string name="edit_details">More details</string>
    <string name="txt_date">date</string>
    <string name="txt_time">time</string>
    <string name="toast_category_set">Category set to %s</string>

    <!-- Titles for the action bar items -->
    <string name="menu_add_entry_title">Add entry</string>
    <string name="menu_add_entry_title_condensed">Add</string>
    <string name="menu_goto_month_title">Go to month</string>
    <string name="menu_goto_month_title_condensed">Month</string>
    <string name="menu_goto_latest_title">Go to latest</string>
    <string name="menu_manage_categories_title">@string/title_activity_category</string>
    <string name="menu_manage_categories_title_condensed">Categories</string>
    <string name="menu_manage_rules_title">@string/title_activity_rules</string>
    <string name="menu_manage_rules_title_condensed">Rules</string>
    
    <!-- Values for the text view helping the user about the enabled state of the save button -->
    <string name="txt_save_hint_no_value">Enter a value to enable saving this entry.</string>
    <string name="txt_save_hint_no_category">Select a category to enable saving this entry.</string>
    <string name="txt_save_hint_no_value_no_category">Enter a value  and select a category to enable saving this entry.</string>
    <string name="txt_save_hint_no_caption">Setting a caption could make the entry more meaningful."</string>

    <!-- Values for the dialog to go to a specific month -->
    <string name="dlg_select_month_title">Select month</string>
    <string name="dlg_select_month_message">Select the month you want to go to</string>

    <!-- Values for the error dialog shown in the unlikely event that the EntryActivity could not parse the date/time -->
    <string name="dlg_parsing_time_failed">The entry contains an illegal time value. It was reset to the current time.</string>

    <!-- Values for the dialog shown when the user attempts to create an entry but there are no categories present -->
    <string name="dlg_no_categories_message">Cannot create a new entry while there are no categories. Would you like to create some now?</string>
   
    <string name="title_activity_category">Manage categories</string>
    <string name="assist_first_start">"Welcome to Ledger! A good place to start is usually by adding some categories. If you would like to manage your categories now, select Settings and then Manage categories."</string>
    <string name="guess_category">Guess category from caption</string>
    <string name="title_activity_rules">Manage rules</string>
    <string name="caption_to_match">Caption to match</string>
    <string name="when_caption_contains_the_phrase">When caption contains the phrase</string>
    <string name="set_category_to">Set category to</string>
   
</resources>