<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item 
        android:id="@+id/menu_add_entry" 
        android:icon="@android:drawable/ic_menu_add" 
        android:showAsAction="always|withText" 
        android:titleCondensed="@string/menu_add_entry_title_condensed" 
        android:title="@string/menu_add_entry_title" 
        android:checkable="false" 
        android:checked="false" 
        android:visible="true"
        android:enabled="true" android:onClick="onAddEntryClick">        
    </item>
    <item 
        android:id="@+id/menu_goto_month" 
        android:icon="@android:drawable/ic_menu_month" 
        android:showAsAction="ifRoom|withText" 
        android:titleCondensed="@string/menu_goto_month_title_condensed" 
        android:title="@string/menu_goto_month_title" 
        android:checkable="false" 
        android:checked="false" 
        android:visible="true"
        android:enabled="true" android:onClick="onGoToMonthClick">        
     </item>
	<item 
	    android:id="@+id/menu_manage_categories"
	    android:showAsAction="withText"
	    android:title="@string/menu_manage_categories_title"
	    android:titleCondensed="@string/menu_manage_categories_title_condensed"
	    android:checkable="false"
	    android:checked="false"
	    android:visible="true"
	    android:enabled="true"
	    android:onClick="onManageCategoriesClick"/>
	<item 
	    android:id="@+id/menu_manage_rules"
	    android:showAsAction="withText"
	    android:title="@string/menu_manage_rules_title"
	    android:titleCondensed="@string/menu_manage_rules_title_condensed"
	    android:checkable="false"
	    android:checked="false"
	    android:visible="true"
	    android:enabled="true"
	    android:onClick="onManageRulesClick"/>
</menu>