<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/listitem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:focusable="true"
    android:gravity="center_vertical"
    android:nextFocusRight="@id/btn_edit"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="7dp"
            android:text="@string/when_caption_contains_the_phrase"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?android:textColorHint" />

        <TextView
            android:id="@id/txt_caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="7dp"
            android:layout_marginTop="6dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:hint="@string/caption_to_match"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="7dp"
            android:text="@string/set_category_to"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?android:attr/textColorHint" />

        <TextView
            android:id="@id/txt_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="7dp"
            android:layout_marginTop="6dp"
            android:ellipsize="end"
            android:hint="@string/txt_category"
            android:maxLines="1"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="11dp"
        android:layout_marginLeft="0px"
        android:layout_marginRight="0px"
        android:layout_marginTop="11dp"
        android:background="?android:attr/dividerVertical" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical" >

        <ImageView
            android:id="@id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@string/edit"
            android:focusable="true"
            android:nextFocusLeft="@id/listitem"
            android:onClick="onEditClick"
            android:padding="8dp"
            android:scaleX="0.9"
            android:scaleY="0.9"
            android:src="@drawable/ic_action_edit" />

        <ImageView
            android:id="@id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@string/delete"
            android:focusable="true"
            android:nextFocusLeft="@id/listitem"
            android:onClick="onDeleteClick"
            android:padding="8dp"
            android:scaleX="0.9"
            android:scaleY="0.9"
            android:src="@drawable/ic_action_delete" />
    </LinearLayout>

</LinearLayout>